--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "scripts":{
-    "commit":"cz"
+  "scripts": {
+    "commit": "cz"
   },
   "dependencies": {
     "azure-storage": "^2.10.7",
-    "cors": "^2.8.5",
     "commitizen": "^4.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
